--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -219,9 +219,23 @@
 
                 .img
                 {
+                    &-1
+                    {
+                        .img-contain
+                        {
+                            background-position: left;
+                        }
+                    }
                     &-2
                     {
                         grid-row:span 1;
+                    }
+                    &-4
+                    {
+                        .img-contain
+                        {
+                            background-position:right;
+                        }
                     }
                 }
             }
