--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -234,7 +234,7 @@
                     {
                         .img-contain
                         {
-                            background-position:right;
+                            background-position:center;
                         }
                     }
                 }
