--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -223,7 +223,7 @@
                     {
                         .img-contain
                         {
-                            background-position: left;
+                            background-position: 30%;
                         }
                     }
                     &-2
