--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -257,10 +257,19 @@
                     {
                         display:flex;
                         height:100%;
+
                         .trainer-pic
                         {
                             height:100%;
-                            width:30%;
+                            width:50%;
+                        }
+
+                        &-1
+                        {
+                            .trainer-pic
+                            {
+                                background-position:70%;
+                            }
                         }
 
                         .trainer-desc
