--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -54,7 +54,7 @@
     {
         &-1
         {
-            font-size:1rem;
+            font-size:0.9rem;
         }
         &-2
         {
@@ -84,7 +84,7 @@
             {
                 .head-1
                 {
-                    font-size:4rem; 
+                    font-size:3.5rem; 
                 }
     
                 .quote-2
@@ -97,6 +97,11 @@
             .showcase-content
             {
                 margin-top:8rem;
+
+                .btn
+                {
+                    margin-top:1.6rem;
+                }
             }
 
             .showcase-art
@@ -132,7 +137,7 @@
             position:absolute;
             display:flex;
             justify-content:center;
-            bottom:50px;
+            bottom:70px;
             z-index:1;
             // display:none;
             
@@ -267,12 +272,12 @@
                 .card-container
                 {
                     grid-template-columns:1fr;
-                    grid-gap:3rem;
+                    grid-gap:1.5rem;
 
                     .trainer-card
                     {
                         display:flex;
-                        height:100%;
+                        height:80%;
 
                         .trainer-pic
                         {
@@ -297,7 +302,7 @@
 
                         .contact-links
                         {
-                            bottom:20px;
+                            bottom:25px;
                             .icon-flex
                             {
                                 .icon-contain
