--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -222,7 +222,7 @@ input
     border:none;
     font-size:0.9rem;
     font-family:$primary-font;
-    font-weight:700;
+    font-weight:500;
     border-radius:3px;
     padding:0.8rem 1.6rem;
     margin-top:0.6rem;
@@ -238,7 +238,7 @@ input
     &-primary
     {
         background:$primary-color;
-        color:$secondary-color;
+        color:$light-color;
 
         &:hover
         {
