--- a/sass/index.scss
+++ b/sass/index.scss
@@ -26,6 +26,7 @@ html,body
         .showcase-content
         {
             margin-top:10%;
+            z-index:1;
 
             .head-1
             {
