--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -383,6 +383,7 @@ input
         .logo
         {
             // position:absolute;
+            transform:scale(1.1);
             margin:auto;
         }
     
