--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,7 +8,7 @@ html,body
     font-weight:700;
     line-height:1.4;
     background:$light-color;
-    overflow-x:hidden;
+    // overflow-x:hidden;
 }
 
 // Homepage styling
