--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -484,6 +484,7 @@ input
                 align-items:center;
                 transform:translateX(-100%);
                 transition:transform 0.4s ease;
+                overflow:hidden;
 
                 .nav-links
                 {
