--- a/sass/index.scss
+++ b/sass/index.scss
@@ -11,18 +11,26 @@ html,body
 
     .navigator
     {
+        // display:none;
         position:fixed;
         top:50%;
-        right:5px;
-        opacity:0.6;
+        right:0;
+        transform:translateX(50px);
+        opacity:0.7;
         z-index:2;
+        transition:all $anim-speed ease;
+
+        &:hover
+        {
+            opacity:1;
+        }
 
         .icon-contain
         {
-            height:30px;
-            width:30px;
+            height:50px;
+            width:50px;
             background:$primary-color;
-            border-radius:50%;
+            // border-radius:50%;
             display:flex;
             justify-content:center;
             align-items:center;
