Added complex animations

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -161,6 +161,21 @@
             }
         }
 
+        // Intro
+        .intro
+        {
+            .intro-text
+            {
+                .hide
+                {
+                    .text
+                    {
+                        font-size:4rem;
+                    }
+
+                }
+            }
+        }
 
     }
 
