--- a/sass/index.scss
+++ b/sass/index.scss
@@ -38,6 +38,8 @@ html,body
     }
 }
 
+
+
 // Homepage styling
 #home
 {
@@ -183,7 +185,49 @@ html,body
         }
     }
 
+    // Site intro styling
+    .intro
+    {
+        position:fixed;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        background:$secondary-color;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        z-index:3;
+        .intro-text
+        {
+            .hide
+            {
+                background:$secondary-color;
+                overflow:hidden;
+                .text
+                {
+                    display:inline-block;
+                    font-family:$secondary-font;
+                    font-weight:bold;
+                    font-size:6rem;
+                    transform:translateY(15rem);
+                }
+            }
+        }
+    }
 
+    // Slider styling
+    .slider
+    {
+        position:fixed;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        background:$primary-color;
+        z-index:3;
+        transform:translateY(100%);
+    }
 }
 
 // Remaining sections styling
