--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,7 +6,7 @@ $primary-font: 'Poppins',sans-serif;
 $secondary-font: 'Nunito',sans-serif;
 $quote-font:'Palanquin Dark',sans-serif;
 $primary-color: #FA2A34;
-$secondary-color:#000;
+$secondary-color:lighten(#000,7%);
 $light-color:#FDFDFD;
 $med-color:#9D9D9D;
 $light-med-color:#f5f5f5;
