--- a/sass/index.scss
+++ b/sass/index.scss
@@ -601,7 +601,7 @@ html,body
                 .trainer-card
                 {
                     position:relative;
-                    overflow:hidden;
+                    // overflow:hidden;
                     // width:33.3%;
                     // height:300px;
                     height:90%;
@@ -616,7 +616,7 @@ html,body
                     .trainer-desc
                     {
                         height:50%;
-                        padding:1.5rem 1.6rem; 
+                        padding:1rem 1.6rem; 
 
                         .title
                         {
@@ -630,43 +630,45 @@ html,body
                         {
                             margin-top:1rem;
                         }
-                    }
-                        
-                    .contact-links
-                    {
-                        position:absolute;
-                        bottom:10px;
-                        height:10%;
-                        // padding:0 1.5rem;
-                        // background:$light-color;
-                        // margin-bottom:0.6rem;
-                        display:flex;
-                        .icon-flex
-                        {
-                            margin-right:0.6rem;
-                            .icon-contain
-                            {
-                                height:40px;
-                                width:40px;
-                                display:flex;
-                                justify-content:center;
-                                align-items:center;
-                                border-radius:50%;
-                                cursor:pointer;
-                                transition:all $anim-speed ease;
 
-                                &:hover
+                        .contact-links
+                        {
+                            position:absolute;
+                            bottom:10px;
+                            // margin-top:0.6rem;
+                            height:10%;
+                            // padding:0 1.5rem;
+                            // background:$light-color;
+                            // margin-bottom:0.6rem;
+                            display:flex;
+                            .icon-flex
+                            {
+                                margin-right:0.6rem;
+                                .icon-contain
                                 {
-                                    background:$dark-color;
-                                    
-                                    i
+                                    height:40px;
+                                    width:40px;
+                                    display:flex;
+                                    justify-content:center;
+                                    align-items:center;
+                                    border-radius:50%;
+                                    cursor:pointer;
+                                    transition:all $anim-speed ease;
+    
+                                    &:hover
                                     {
-                                        color:$primary-color;
+                                        background:$dark-color;
+                                        
+                                        i
+                                        {
+                                            color:$primary-color;
+                                        }
                                     }
                                 }
                             }
                         }
                     }
+                        
 
                     &-1
                     {
