--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -413,6 +413,7 @@
                     display:block;
                     margin-top:1.6rem;
                     padding:0 2rem;
+                    grid-gap:0;
     
                     .contact-flex
                     {
