--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,7 +5,7 @@
 $primary-font: 'Poppins',sans-serif;
 $secondary-font: 'Nunito',sans-serif;
 $quote-font:'Palanquin Dark',sans-serif;
-$primary-color: #FA2A34;
+$primary-color: #FA2A34; //#FA2A34
 $secondary-color:lighten(#000,7%);
 $light-color:#FDFDFD;
 $med-color:#9D9D9D;
